<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Twitter: " />

            <Button
                android:id="@+id/bt_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Connect" />

            <Button
                android:id="@+id/bt_twitter_get_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Get token" />

            <Button
                android:id="@+id/bt_twitter_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Disconnect" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Facebook: " />

            <Button
                android:id="@+id/bt_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Connect" />

            <Button
                android:id="@+id/bt_facebook_get_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Get token" />

            <Button
                android:id="@+id/bt_facebook_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Disconnect" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Google: " />

            <Button
                android:id="@+id/bt_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Connect" />

            <Button
                android:id="@+id/bt_google_get_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Get token" />

            <Button
                android:id="@+id/bt_google_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Disconnect" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Linkedin: " />

            <Button
                android:id="@+id/bt_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Connect" />

            <Button
                android:id="@+id/bt_linkedin_get_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Get token" />

            <Button
                android:id="@+id/bt_linkedin_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Disconnect" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yahoo: " />

            <Button
                android:id="@+id/bt_yahoo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Connect" />

            <Button
                android:id="@+id/bt_yahoo_get_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Get token" />

            <Button
                android:id="@+id/bt_yahoo_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Disconnect" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Github: " />

            <Button
                android:id="@+id/bt_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Connect" />

            <Button
                android:id="@+id/bt_github_get_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Get token" />

            <Button
                android:id="@+id/bt_github_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Disconnect" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_secret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bt_all_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="All disconnect" />
    </LinearLayout>
</ScrollView>