<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Facebook" />

        <Button
            android:id="@+id/bt_connect_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Connect" />

        <Button
            android:id="@+id/bt_show_profile_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show profile" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yahoo" />

        <Button
            android:id="@+id/bt_connect_yahoo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Connect" />

        <Button
            android:id="@+id/bt_show_profile_yahoo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show profile" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
